20-apps/traefik-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    svc: http
spec:
  replicas: 3
  selector:
    matchLabels:
      svc: http
  template:
    metadata:
      labels:
        svc: http
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
    - name: http
      port: 80
  selector:
    svc: http
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`nginx.k8s.local`)
    services:
    - kind: Service
      name: nginx
      namespace: default
      port: 80
  tls:
    store: 
      name: traefik-ssl-default
