20-apps/traefik-external-svc.yml
---
kind: Service
apiVersion: v1
metadata:
  name: gitlab-external  
spec:
  type: ExternalName
  ports:
  - name: http    
    port: 80   
  externalName: 192.168.0.200
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-external
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`gitlab.k8s.lab`)
    services:
    - kind: Service
      name: gitlab-external
      namespace: default
      port: 80
  tls:
    secretName: gitlab.k8s.lab
---
